--- a/chat.sh.html
+++ b/chat.sh.html
@@ -6,6 +6,7 @@
   <style>
     .self { color: green }
     .other { color: black }
+    body { background: black; color: white; font-family: monospace }
   </style>
 </head>
 <body>
