--- a/chat.sh.html
+++ b/chat.sh.html
@@ -2,11 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/png" href="https://snakey.neocities.org/basilix.png">
   <title>Astrochat</title>
   <style>
     .self { color: green }
     .other { color: black }
     body { background: black; color: white; font-family: monospace }
+    input { background: black; color: green; border: none; }
+     input { background: black; color: cyan; font-weight: bold; outline: none;}
   </style>
 </head>
 <body>
