--- a/chat.sh.html
+++ b/chat.sh.html
@@ -5,11 +5,11 @@
   <link rel="icon" type="image/png" href="https://snakey.neocities.org/basilix.png">
   <title>Astrochat</title>
   <style>
-    .self { color: green }
-    .other { color: black }
+    .self { color: white text-shadow: 3px 3px 3px white; }
+    .other { color: green; text-shadow: 3px 3px 3px green; }
     body { background: black; color: white; font-family: monospace }
-    input { background: black; color: green; border: none; }
-     input { background: black; color: cyan; font-weight: bold; outline: none;}
+    input { background: black; color: green; border: none; font-family: monospace}
+     input:focus { background: black; color: cyan; font-weight: bold; outline: none; font-family: monospace }
   </style>
 </head>
 <body>
